--- a/templates/go-template.yaml
+++ b/templates/go-template.yaml
@@ -15,11 +15,16 @@ spec:
       required:
         - projectName
         - repoVisibility
+        - owner
       properties:
         projectName:
           title: Nome do Projeto
           type: string
           description: Nome do repositório ou serviço.
+        owner:
+          title: Dono do Repositório
+          type: string
+          description: Nome do usuário ou organização no GitHub.
         repoVisibility:
           title: Visibilidade do Repositório
           type: string
@@ -36,7 +41,10 @@ spec:
         targetPath: .
     - id: process-template
       name: Processar Template
-      action: scaffolder:template
+      action: fetch:plain
+      input:
+        url: ./ 
+        targetPath: .
     - id: run-validation
       name: Validar Configuração Inicial
       action: run:command
@@ -49,7 +57,7 @@ spec:
       action: publish:github
       input:
         repoUrl: github.com/{{ parameters.owner }}/{{ parameters.projectName }}
-        repoVisibility: {{ parameters.repoVisibility }}
+        repoVisibility: "{{ parameters.repoVisibility }}"
     - id: register-in-catalog
       name: Registrar no Catálogo
       action: catalog:register
