--- a/templates/go-template.yaml
+++ b/templates/go-template.yaml
@@ -15,11 +15,16 @@ spec:
       required:
         - projectName
         - repoVisibility
+        - owner
       properties:
         projectName:
           title: Nome do Projeto
           type: string
           description: Nome do repositório ou serviço.
+        owner:
+          title: Dono do Repositório
+          type: string
+          description: Nome do usuário ou organização no GitHub.
         repoVisibility:
           title: Visibilidade do Repositório
           type: string
@@ -34,24 +39,23 @@ spec:
       input:
         url: https://github.com/pedrojbDev/go-template-backstage/tree/main/go-base
         targetPath: .
-    
     - id: process-template
       name: Processar Template
-      action: scaffolder:template
-    
-    - id: verify-setup
-      name: Verificar Estrutura do Projeto
-      action: fs:readdir
+      action: fetch:plain
       input:
-        path: .
-
+        url: ./ 
+        targetPath: .
+        - id: verify-setup
+        name: Verificar Estrutura do Projeto
+        action: fs:readdir
+        input:
+          path: .
     - id: publish-to-repo
       name: Publicar no GitHub
       action: publish:github
       input:
         repoUrl: github.com/{{ parameters.owner }}/{{ parameters.projectName }}
-        repoVisibility: ${parameters.repoVisibility}
-
+        repoVisibility: ${{ parameters.repoVisibility }}
     - id: register-in-catalog
       name: Registrar no Catálogo
       action: catalog:register
@@ -59,7 +63,6 @@ spec:
         location:
           type: url
           target: https://github.com/{{ parameters.owner }}/{{ parameters.projectName }}/blob/main/catalog-info.yaml
-
   output:
     links:
       - title: Repositório do Projeto
