--- a/templates/go-template.yaml
+++ b/templates/go-template.yaml
@@ -15,16 +15,11 @@ spec:
       required:
         - projectName
         - repoVisibility
-        - owner
       properties:
         projectName:
           title: Nome do Projeto
           type: string
           description: Nome do repositório ou serviço.
-        owner:
-          title: Dono do Repositório
-          type: string
-          description: Nome do usuário ou organização no GitHub.
         repoVisibility:
           title: Visibilidade do Repositório
           type: string
@@ -32,22 +27,29 @@ spec:
             - public
             - private
           description: Defina a visibilidade do repositório GitHub.
-
   steps:
     - id: fetch-template
       name: Buscar Template Base
       action: fetch:template
       input:
-        url: https://github.com/pedrojbDev/go-template-backstage/archive/main.zip
+        url: https://github.com/pedrojbDev/backstage-go-template/blob/main/go-base
         targetPath: .
-
+    - id: process-template
+      name: Processar Template
+      action: scaffolder:template
+    - id: run-validation
+      name: Validar Configuração Inicial
+      action: run:command
+      input:
+        workingDirectory: .
+        command: |
+          go mod tidy && go test ./...
     - id: publish-to-repo
       name: Publicar no GitHub
       action: publish:github
       input:
         repoUrl: github.com/{{ parameters.owner }}/{{ parameters.projectName }}
-        repoVisibility: "{{ parameters.repoVisibility }}"
-
+        repoVisibility: {{ parameters.repoVisibility }}
     - id: register-in-catalog
       name: Registrar no Catálogo
       action: catalog:register
@@ -55,7 +57,6 @@ spec:
         location:
           type: url
           target: https://github.com/{{ parameters.owner }}/{{ parameters.projectName }}/blob/main/catalog-info.yaml
-
   output:
     links:
       - title: Repositório do Projeto
